tests/ui/transmute-ref-src-unsized.nightly.stderr
error[E0599]: the method `transmute_ref` exists for struct `Wrap<&[u8], &[u8; 1]>`, but its trait bounds were not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-ref-src-unsized.rs:14:31
   |
14 | const SRC_UNSIZED: &[u8; 1] = transmute_ref!(&[0u8][..]);
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: the following trait bounds were not satisfied:
           `[u8]: Sized`
           `<[u8; 1] as KnownLayout>::PointerMetadata = usize`
           which is required by `zerocopy::util::macro_util::Wrap<&[u8], &[u8; 1]>: zerocopy::util::macro_util::TransmuteRefDst<'_>`
   = note: the full name for the type has been written to '/long-type-HASH.txt'
   = note: consider using `--verbose` to print the full type name to the console
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
